--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/splash"
+        android:roundIcon="@drawable/splash"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySplashScreen"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:label="Qr Code"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.MySplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
